# Poster

./: .gitignore  README.md  _tests.py  db.sqlite3  pyproject.toml
Poster/: celery.py  settings.py  urls.py
event_app/: models.py  tasks.py
event_app/api/: permissions.py  serializers.py  urls.py  views.py
event_app/migrations/: 0001_initial.py  0002_initial.py
event_app/tests/: test_events.py  test_tasks.py  test_token.py  test_users.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py  0002_user_notify.py
